# Insight-DBR

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h  config.status  config.status.lineno  configure  configure.in  dbr.desktop  dbr.desktop.in  dbr.spec  dbr.spec.in  description-pak  py-compile
debian/: changelog  control  dbr.xpm  files  install  rules
debian/dbr/DEBIAN/: control  md5sums
debian/dbr/usr/share/doc/dbr/: README.Debian  copyright
debian/dbr/usr/share/locale/gl/LC_MESSAGES/: dbr.mo
doc-pak/: AUTHORS  ChangeLog  README
doc-pak/docs/: ayuda.html  help.html  licence.html  licencia.html
po/: .intltool-merge-cache  ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  dbr.pot  es.gmo  es.po  gl.po
src/: Makefile  Makefile.am  Makefile.in  controlador.py  controlador.py.in  dbr.py  registro.py
